--- a/components/styles/commonStyle.css
+++ b/components/styles/commonStyle.css
@@ -24,15 +24,21 @@ html, body {
   font-family: 'Segoe UI', sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
+  overflow-x: auto;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100%;
+  min-width: max-content;
 }
 
 header {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   background-color: var(--header-bg);
   padding: 1rem;
 }
